--- a/index.html
+++ b/index.html
@@ -72,6 +72,20 @@
   </pre>
       <h1><span style="font-size: .8em">Project Details</span></h1>
 
+      <pre><span style="font-size: 20px">
+        This project was completed using an iterative design approach that 
+        included receiving feedback at multiple steps and adjusting the interface
+        based on what was learned. After creating initial sketches for what this 
+        design may look like, feedback was received from a design studio with peers
+        which provided a lot of useful insight on improvements that could be made. 
+
+
+        After improvements had been implemented to the initial design, UserTesting 
+        was used to gain insightful feedback from industry professionals. This step was 
+        very advantageous in getting more opinions on what was good with the current 
+        design and what needed improvement still. The links to the UserFeedback are 
+        included below</span>
+      </pre>
 
       <h2>Initial Sketches</h2>
       <div class="projects">
